--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.teamproject">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_td"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_td_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TeamProject">
+        android:theme="@style/Theme.TeamProject"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".front.FrdActivity"></activity>
+        <activity
+            android:name=".front.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.TeamProject.NoActionBar" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity"></activity>
-        <activity android:name=".login.RegisterActivity"></activity>
-        <activity android:name=".TodoList.MainActivity"></activity>
-        <activity android:name=".TodoList.ListDetail"></activity>
-        <activity android:name=".TodoList.MakeTodoList"></activity>
-        <activity android:name=".TodoList.UpdateTodoList"></activity>
+        <activity android:name=".login.LoginActivity" />
+        <activity android:name=".login.RegisterActivity" />
+        <activity android:name=".TodoList.MainActivity" />
+        <activity android:name=".TodoList.ListDetail" />
+        <activity android:name=".TodoList.MakeTodoList" />
+        <activity android:name=".TodoList.UpdateTodoList" />
     </application>
 
 </manifest>
